--- a/script/asimulation.ipynb
+++ b/script/asimulation.ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
      "text": [
       "0b1110000101101001111\n",
       "[1989148 1989148]\n",
-      "19\n"
+      "64\n"
      ]
     }
    ],
@@ -141,6 +141,142 @@
     "print((np.sum(s * 2**np.arange(s.shape[1]), axis=1)))\n",
     "\n",
     "print(len(str(bin(4539414553176849823))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1, Loss: 0.09711514175822487\n",
+      "Epoch 2, Loss: 0.017199504158619528\n",
+      "Epoch 3, Loss: 0.011841643696904859\n",
+      "Epoch 4, Loss: 0.009457759419220942\n",
+      "Epoch 5, Loss: 0.008070778908946485\n",
+      "Binary training with one hidden layer and tanh activation finished\n",
+      "Accuracy on the test dataset: 99.95%\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "import torchvision\n",
+    "import torchvision.transforms as transforms\n",
+    "\n",
+    "\n",
+    "# Define a simple feedforward neural network with one hidden layer and tanh activation\n",
+    "class Net(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(Net, self).__init__()\n",
+    "        self.fc1 = nn.Linear(28 * 28, 64)  # One hidden layer with 64 units\n",
+    "        self.fc2 = nn.Linear(64, 2)  # Output layer with 2 classes\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = x.view(-1, 28 * 28)  # Flatten the input\n",
+    "        x = torch.tanh(self.fc1(x))  # Apply tanh activation\n",
+    "        x = self.fc2(x)\n",
+    "        return x\n",
+    "\n",
+    "# Define data transformations and load the MNIST test dataset\n",
+    "transform = transforms.Compose([transforms.ToTensor(), transforms.Normalize((0.5,), (0.5,))])\n",
+    "testset = torchvision.datasets.MNIST(root='./data', train=False, download=True, transform=transform)\n",
+    "trainset = torchvision.datasets.MNIST(root='./data', train=True, download=True, transform=transform)\n",
+    "\n",
+    "# Define a function to filter the test dataset to include only two classes (e.g., 3 and 7)\n",
+    "def filter_dataset(dataset, class1, class2):\n",
+    "    filtered_data = []\n",
+    "    for data, label in dataset:\n",
+    "        if label == class1 or label == class2:\n",
+    "            filtered_data.append((data, label))\n",
+    "    return filtered_data\n",
+    "\n",
+    "# Filter the test dataset to include only classes 3 and 7\n",
+    "class1 = 0\n",
+    "class2 = 1\n",
+    "\n",
+    "\n",
+    "net = Net()\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = optim.SGD(net.parameters(), lr=0.001, momentum=0.9)\n",
+    "\n",
+    "\n",
+    "filtered_trainset = filter_dataset(trainset, class1, class2)\n",
+    "\n",
+    "# Create a DataLoader for the filtered dataset\n",
+    "trainloader = torch.utils.data.DataLoader(filtered_trainset, batch_size=64, shuffle=True)\n",
+    "# Training loop\n",
+    "for epoch in range(5):  # You can adjust the number of epochs\n",
+    "    running_loss = 0.0\n",
+    "    for i, data in enumerate(trainloader, 0):\n",
+    "        inputs, labels = data\n",
+    "        optimizer.zero_grad()\n",
+    "        outputs = net(inputs)\n",
+    "        loss = criterion(outputs, labels)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        running_loss += loss.item()\n",
+    "\n",
+    "    print(f\"Epoch {epoch+1}, Loss: {running_loss / len(trainloader)}\")\n",
+    "\n",
+    "print(\"Binary training with one hidden layer and tanh activation finished\")\n",
+    "\n",
+    "filtered_testset = filter_dataset(testset, class1, class2)\n",
+    "\n",
+    "# Create a DataLoader for the filtered test dataset\n",
+    "testloader = torch.utils.data.DataLoader(filtered_testset, batch_size=64, shuffle=False)\n",
+    "# Evaluation loop\n",
+    "correct = 0\n",
+    "total = 0\n",
+    "with torch.no_grad():\n",
+    "    for data in testloader:\n",
+    "        images, labels = data\n",
+    "        outputs = net(images)\n",
+    "        _, predicted = torch.max(outputs.data, 1)\n",
+    "        total += labels.size(0)\n",
+    "        correct += (predicted == labels).sum().item()\n",
+    "\n",
+    "accuracy = 100 * correct / total\n",
+    "print(f'Accuracy on the test dataset: {accuracy:.2f}%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2115, 784)"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Iterate through the test loader and collect data\n",
+    "testloader = torch.utils.data.DataLoader(filtered_testset, batch_size=64, shuffle=False)\n",
+    "\n",
+    "# Initialize empty lists to store image data and labels\n",
+    "image_data = []\n",
+    "labels = []\n",
+    "for data in testloader:\n",
+    "    images, batch_labels = data\n",
+    "    image_data.append(images.numpy())  # Convert tensor to numpy array\n",
+    "    labels.append(batch_labels.numpy())  # Convert tensor to numpy array\n",
+    "\n",
+    "# Concatenate the lists of arrays to get a single array for image data and labels\n",
+    "image_data = np.concatenate(image_data).reshape(2115, 28*28)\n",
+    "labels = np.concatenate(labels)\n",
+    "image_data.shape"
    ]
   },
   {
